--- a/manuscript/PriceAnalysis.bib
+++ b/manuscript/PriceAnalysis.bib
@@ -61,3 +61,47 @@ publisher={CreateSpace Independent Publishing Platform}
   year={1999},
   institution={United States Department of Agriculture, Economic Research Service}
 }
+
+@article{granger1974spurious,
+  title={Spurious regressions in econometrics},
+  author={Granger, Clive WJ and Newbold, Paul},
+  journal={Journal of econometrics},
+  volume={2},
+  number={2},
+  pages={111--120},
+  year={1974},
+  publisher={Elsevier}
+}
+
+@article{dickey1979distribution,
+  title={Distribution of the estimators for autoregressive time series with a unit root},
+  author={Dickey, David A and Fuller, Wayne A},
+  journal={Journal of the American statistical association},
+  volume={74},
+  number={366a},
+  pages={427--431},
+  year={1979},
+  publisher={Taylor \& Francis}
+}
+
+@article{phillips1988testing,
+  title={Testing for a unit root in time series regression},
+  author={Phillips, Peter CB and Perron, Pierre},
+  journal={Biometrika},
+  volume={75},
+  number={2},
+  pages={335--346},
+  year={1988},
+  publisher={Biometrika Trust}
+}
+
+@article{kwiatkowski1992testing,
+  title={Testing the null hypothesis of stationarity against the alternative of a unit root: How sure are we that economic time series have a unit root?},
+  author={Kwiatkowski, Denis and Phillips, Peter CB and Schmidt, Peter and Shin, Yongcheol},
+  journal={Journal of econometrics},
+  volume={54},
+  number={1},
+  pages={159--178},
+  year={1992},
+  publisher={Elsevier}
+}
