--- a/manuscript/PriceAnalysis.bib
+++ b/manuscript/PriceAnalysis.bib
@@ -105,3 +105,14 @@ publisher={CreateSpace Independent Publishing Platform}
   year={1992},
   publisher={Elsevier}
 }
+
+@article{fama1970efficient,
+  title={Efficient capital markets: A review of theory and empirical work*},
+  author={Fama, Eugene F},
+  journal={The journal of Finance},
+  volume={25},
+  number={2},
+  pages={383--417},
+  year={1970},
+  publisher={Wiley Online Library}
+}
