--- a/manuscript/PriceAnalysis.bib
+++ b/manuscript/PriceAnalysis.bib
@@ -116,3 +116,10 @@ publisher={CreateSpace Independent Publishing Platform}
   year={1970},
   publisher={Wiley Online Library}
 }
+
+
+@book{dri2002Nap,
+  title={Dietary Reference Intakes for Energy, Carbohydrate, Fiber, Fatty Acids, Cholesterol, Protien, and Amino Acids},
+  year={2002},
+  publisher={National Academies Press}
+}
