--- a/manuscript/PriceAnalysis.bib
+++ b/manuscript/PriceAnalysis.bib
@@ -123,3 +123,38 @@ publisher={CreateSpace Independent Publishing Platform}
   year={2002},
   publisher={National Academies Press}
 }
+
+@article{eugestation,
+   author = {Carman, Tim},
+   title = {Pork industry gives sows room to move},
+   journal = {The Washington Post},
+   year = {2012},
+   month = {May},
+   URL = {https://www.washingtonpost.com/lifestyle/food/pork-industry-gives-sows-room-to-move/2012/05/25/gJQAISlxyU_story.html}
+}
+
+@techreport{usitctrade,
+  title={Pork and Swine Industry and Trade Summary},
+  author={Giamalva, John},
+  volume = {ITS-11},
+  year={2014},
+  institution={United States International Trade Commission},
+  URL = {http://www.usitc.gov/publications/332/pork_and_swine_summary_its_11.pdf}
+}
+
+@techreport{usdacensus,
+  title={Hog and Pig Farming: A 22.5 billion industry Up 25 Percent since 2007},
+  volume = {ACH12-4},
+  year={2014},
+  month={June},
+  institution={United States Department of Agriculture},
+  URL = {http://www.agcensus.usda.gov/Publications/2012/Online_Resources/Highlights/Hog_and_Pig_Farming/Highlights_Hog_and_Pig_Farming.pdf}
+}
+
+@techreport{gipsa10,
+  title={Packers and Stockyards Program 2010 Annual Report},
+  volume = {65},
+  year={2011},
+  month={March},
+  institution={United States Department of Agriculture, GIPSA}
+}
