--- a/Chapter12.Rmd
+++ b/Chapter12.Rmd
@@ -11,6 +11,10 @@ bibliography: PriceAnalysis.bib
 
 <!-- Add a bit about 'Box-Jenkins' model identification -->
 
+# [Return to Book Homepage](http://mindymallory.github.io/PriceAnalysis/)
+
+# Introduction
+
 In this chapter we introduce the first category of time-series econometric forecasting models we will learn: Auto-regressive Integrated Moving Average (ARIMA) models. This class of models is only capable of forecasting one market at a time, and we will see in later chapters how to econometrically consider (forecast) more than one market at a time when there is reason to believe two or markets are related. 
 
 The ARIMA class of models can be broken down into subcategories that are useful for building intuition. 
