--- a/Chapter5.Rmd
+++ b/Chapter5.Rmd
@@ -9,6 +9,8 @@ output:
 bibliography: PriceAnalysis.bib
 ---
 
+# [Return to Book Homepage](http://mindymallory.github.io/PriceAnalysis/) 
+
 # Introduction
 
 The preceding chapters have served as a background about agricultural markets, and important informational events that drive commodity prices. Going forward, we will focus our energy on the more data and technical questions of actually forecasting elements of the balance sheet - and later, short term price changes using time-series econometric techniques. In the remainder of this chapter, the discussion and figures are all for corn.  
