--- a/Chapter7.Rmd
+++ b/Chapter7.Rmd
@@ -9,6 +9,8 @@ output:
 bibliography: PriceAnalysis.bib
 ---
 
+# [Return to Book Homepage](http://mindymallory.github.io/PriceAnalysis/)
+
 # Introduction 
 
 In the WASDE balance sheet for corn there are three use categories. Two account for domestic consumption - Food, Seed and Industrial, and Feed and Residual - while exports make up the third category. Ethanol makes up a large portion of the Food, Seed, and Industrial category, so it is given its own line in the balance sheet. 
